# entropy-comovement-replication

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  requirements.txt  setup.py
data/raw/: 10_Portfolios_Prior_12_2.csv  F-F_Research_Data_Factors.csv  Portfolios_Formed_on_BE-ME.csv  Portfolios_Formed_on_ME.csv
docs/: INSTALL.md  TECHNICAL_DOCUMENTATION.md
notebooks/: exploratory_analysis.ipynb
scripts/: build_cpp.sh  extension1_crisis_indicators.py  extension1_panel_reg.py  extension1_plot_drawdowns.py  extension1_timeseries_reg.py  extension2_build_factors.py  extension2_data_prep.py  extension2_plot_modern.py  extension2_portfolio_test.py  extension3_backtest.py  extension3_eval_plots.py  extension3_ml_prep.py  extension3_walk_forward.py  format_tables.py  generate_timeseries_data.py  plot_asymmetry_distribution.py  plot_equity_curve.py  plot_power_curve.py  plot_premium_dynamics.py  replicate_fig1_2.py  replicate_table1.py  replicate_table2.py  replicate_table3.py  replicate_table4.py  replicate_table5.py  replicate_table6.py  replicate_table7.py  robustness_checks.py  run_extension1.py  run_extension2.py  run_extension3.py  run_full_replication.py
src/cpp/: bindings.cpp  entropy.cpp  entropy.h
src/python/: characteristics.py  data_loader.py  portfolio.py  report_generator.py  robustness.py  simulation.py  validation.py
tests/: CMakeLists.txt  test_integration.py  test_minimal.py  test_phase1.cpp  test_phase2.py  test_phase3.py  test_phase4.py  test_phase4_simple.py  test_phase5.py  test_phase6.py  test_python_integration.py  test_validation.py
